--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap'
 		rel='stylesheet'
 	/>
-	<title>Accord.US</title>
+	<title>accord.us</title>
 </head>
 <body>
 <div id='root'></div>
